[tool.poetry]
name = "python-flask-Api"
version = "0.1.0"
description = ""
authors = ["Blackpossum <yosaphatharwindra@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
poetry-dotenv-plugin = "^0.2.0"
Flask-SQLAlchemy = "^3.1.1"
psycopg2 = "^2.9.9"
pymysql = "^1.1.0"
cryptography = "^42.0.2"
flask-migrate = "^4.0.5"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
